@@ -1,7 +1,0 @@
-watray_pixmapsdir = $(pkgdatadir)/pixmaps
-
-watray_pixmaps_DATA = \
-	error-mark.png
-
-EXTRA_DIST = $(watray_pixmaps_DATA)
-
